<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AshuraActivity">


    <ToggleButton
        android:id="@+id/playPauseToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/toggleButton"
        android:textOff="@string/play"
        android:textOn="@string/pause"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseToggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playPauseToggle"
        app:layout_constraintTop_toTopOf="@+id/playPauseToggle"
        app:layout_constraintVertical_bias="0.48000002" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playPauseToggle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="647dp"
                android:contentDescription="@string/ashura"
                android:scaleType="fitStart"
                android:src="@drawable/ashura1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="647dp"
                android:contentDescription="@string/ashura"
                android:scaleType="fitStart"
                android:src="@drawable/ashura2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="649dp"
                android:contentDescription="@string/ashura"
                android:scaleType="fitStart"
                android:src="@drawable/ashura3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="649dp"
                android:contentDescription="@string/ashura"
                android:scaleType="fitStart"
                android:src="@drawable/ashura4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="649dp"
                android:contentDescription="@string/ashura"
                android:scaleType="fitStart"
                android:src="@drawable/ashura5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="649dp"
                android:contentDescription="@string/ashura"
                android:scaleType="fitStart"
                android:src="@drawable/ashura6" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="649dp"
                android:contentDescription="@string/ashura"
                android:scaleType="fitStart"
                android:src="@drawable/ashura7" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="649dp"
                android:contentDescription="@string/ashura"
                android:scaleType="fitStart"
                android:src="@drawable/ashura8" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
